--- a/todo_app/templates/home.html
+++ b/todo_app/templates/home.html
@@ -8,6 +8,11 @@
 
 {% include './components/test-vue.html' %}
 
+<h5>Button Counter App:</h5>
+{% include './components/button-counter.html' %}
+
+<br>
+
 <h5>To Do List (Vue Component):</h5>
 {% include './components/todo-list.html' with todos=todos %}
 
